Fixed bug where menu wasn't fixing on mobile view

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*-- Nav Bar --*/
 
-.nav--fixed {
+nav.fixed {
     position: fixed;
     width: 100%;
     top: 0;
